# phoma

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.cmake/: Version.h.in
res/: res.qrc
res/icon/: app.icns
scripts/: windows-publish.ps1
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/debug/: modelViewer.hpp
src/delegate/: DiskScanner.cpp  DiskScanner.h  MediaViewerDelegate.cpp  MediaViewerDelegate.h
src/model/: MediaListModel.cpp  MediaListModel.h
src/utils/: Settings.hpp  Tools.cpp  Tools.h
src/view/: AboutPage.cpp  AboutPage.h  BasePage.cpp  BasePage.h  FavoritePage.cpp  FavoritePage.h  GalleryPage.cpp  GalleryPage.h  MediaViewer.cpp  MediaViewer.h  SettingPage.cpp  SettingPage.h
src/view/component/: FileInfoWidget.cpp  FileInfoWidget.h  GalleryWidget.cpp  GalleryWidget.h  ImageViewer.cpp  ImageViewer.h  MediaFlexLayout.cpp  MediaFlexLayout.h  MediaPreviewer.cpp  MediaPreviewer.h  WindowOverlayWidget.cpp  WindowOverlayWidget.h
